<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/enter_website"
        style="@style/FormStyle"
        android:background="@drawable/border_form"
        android:hint="@string/enter_website_hint"
        android:text="@string/website_default" />

    <Button
        android:id="@+id/open_website_button"
        style="@style/ButtonStyle"
        android:onClick="openWebsite"
        android:text="@string/open_website" />

    <EditText
        android:id="@+id/enter_location"
        style="@style/FormStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_form"
        android:ems="10"
        android:hint="@string/enter_location_hint"
        android:inputType="textPersonName"
        android:text="@string/location_default" />

    <Button
        android:id="@+id/open_location_button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openLocation"
        android:text="@string/open_location" />

    <EditText
        android:id="@+id/enter_shared_text"
        style="@style/FormStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_form"
        android:ems="10"
        android:hint="@string/enter_shared_text_hint"
        android:inputType="textPersonName"
        android:text="@string/shared_text_default" />

    <Button
        android:id="@+id/share_text_button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="shareText"
        android:text="@string/share_text" />
</androidx.appcompat.widget.LinearLayoutCompat>